--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
             padding: 50px;
         }
 
+        .jumbotron {
+            background-color: #007bff;
+            color: #ffffff;
+        }
+
         h1, p {
-            color: #007bff;
+            color: #ffcc00;
         }
     </style>
 </head>
@@ -21,7 +26,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-4">Trang web đã chuyển tên miền!</h1>
-            <p class="lead">Bạn sẽ được chuyển hướng đến <a href="https://vpnfast.pro">vpnfast.pro</a> trong 5 giây.</p>
+            <p class="lead">Bạn sẽ được chuyển hướng đến <a href="https://vpnfast.pro" style="color: #ffcc00;">vpnfast.pro</a> trong 5 giây.</p>
         </div>
     </div>
     
